fix: Mudanças no visual, adição de função de exportar para pdf e reparo nos horários de lançamentos

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,14 @@
 {
   "name": "Constant Driver",
-  "short_name": "Driver App",
+  "short_name": "Constant Driver",
   "description": "An application for ride-sharing drivers to track their daily earnings, expenses, and work shifts with detailed reports and filters.",
   "start_url": "/",
   "id": "/",
   "scope": "/",
   "display": "standalone",
   "orientation": "portrait-primary",
-  "background_color": "#111827",
-  "theme_color": "#1a202c",
+  "background_color": "#141414",
+  "theme_color": "#141414",
   "icons": [
     {
       "src": "icons/icon-192x192.png",
